fixed blurry star + star positioning bug

--- a/scriptor-app/src/components/_Components.css
+++ b/scriptor-app/src/components/_Components.css
@@ -251,8 +251,8 @@ button:focus {
 }
 
 .favorites .favList .favResult a div img{
-    position: absolute;
-    right: 150px;
+    position: relative;
+    left: 120px;
 }
 
 /* Settings */
